examples/test/testpolicy14659.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14659
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key13: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value24
          key0: value38
          key8: value46
      podSelector:
        matchLabels:
          key15: value23
          key10: value43
          key47: value40
